tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_errors@duplicate_component_argument.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: tera/src/snapshot_tests/parser_inputs/errors/duplicate_component_argument.txt
---
error: Component argument `name` is defined more than once
 --> duplicate_component_argument.txt:1:31
  |
1 | {% component foo(name: string, name: integer) %}{% endcomponent %}
  |                                ^^^^

note: first defined here duplicate_component_argument.txt:1:17
  |
1 | {% component foo(name: string, name: integer) %}{% endcomponent %}
  |                  ^^^^
